--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "@types/node": "^22.7.0",
     "tsup": "^8.3.0",
     "typescript": "^5.6.2",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vitest": "^2.1.2"
   },
   "scripts": {
-    "build:cli": "pnpm --filter ./packages/** run build"
+    "build:cli": "pnpm --filter ./packages/** run build",
+    "test": "vitest -w",
+    "test:coverage": "vitest run --coverage"
   }
 }
