--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "test": "echo test",
-    "build": "tsup"
+    "build": "tsup",
+    "test:coverage": "vitest run --coverage"
   },
   "exports": {
     ".": {
@@ -32,6 +33,7 @@
     "chalk": "4"
   },
   "devDependencies": {
-    "@analyze-cli/shared": "workspace:^"
+    "@analyze-cli/shared": "workspace:^",
+    "@vitest/coverage-v8": "2.1.2"
   }
 }
